# ScArlet-Sails

./: .gitignore  ARCHITECTURE.md  BLOCK2_SUMMARY.md  COMMIT_CHECKLIST.md  DAY12_FINAL_SUMMARY.md  DAY1_COMPLETION_SUMMARY.md  FILE_INVENTORY.md  QUICK_START_GUIDE.md  README.md  README_BACKTESTING.md  backtester_v2_real_data.py  backtester_v3_production.py  config.yaml  hybrid_v2.py  hybrid_v2_fixed.py  main.py  orchestrator.py  pyproject.toml  requirements.txt  rule_based_v2_OPTIMIZED.py  run_backtest.py  test_hybrid_integration.py  test_hybrid_strategy.py  test_multitf_system.py  test_rule_based_FINAL.py  test_rule_based_integration.py  test_strategy_methods.py  test_xgboost_ml_integration.py  train_xgboost.py  xgboost_ml_v2_FINAL.py  xgboost_ml_v2_adapted.py
ai_modules/: __init__.py  advanced_model_manager.py  enhanced_signal_validator.py  market_rag.py
analysis/: dispersion_analyzer.py  simple_threshold_backtest.py
backtest_results/: HybridStrategy_BTC_15m_metrics.json  HybridStrategy_BTC_15m_trades.csv  HybridStrategy_ENA_15m_equity.csv  HybridStrategy_ENA_15m_metrics.json  HybridStrategy_ENA_15m_trades.csv  HybridStrategy_ETH_15m_metrics.json  HybridStrategy_ETH_15m_trades.csv  HybridStrategy_SOL_15m_metrics.json  HybridStrategy_SOL_15m_trades.csv  RuleBasedStrategy_BTC_15m_metrics.json  RuleBasedStrategy_BTC_15m_trades.csv  SimpleRSIStrategy_BTC_15m_metrics.json  SimpleRSIStrategy_BTC_15m_trades.csv  SimpleRSIStrategy_ENA_15m_equity.csv  SimpleRSIStrategy_ENA_15m_metrics.json  SimpleRSIStrategy_ENA_15m_trades.csv  SimpleRSIStrategy_ETH_15m_metrics.json  (+7 more)
(+179 files in other folders)
