[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scarlet-sails"
version = "0.1.0"
description = "Scarlet Sails trading system"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
