[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scarlet-sails"
version = "0.1.0"
description = "Crypto ML research repo"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "xgboost",
    "scikit-learn",
    "pyyaml",
]
